--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   "dependencies": {
     "@types/prompts": "^2.4.9",
     "kleur": "^4.1.5",
-    "prompts": "^2.4.2"
+    "oh-my-logo": "^0.4.0",
+    "prompts": "^2.4.2",
+    "react-devtools-core": "^7.0.1"
   }
 }
