--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shadnex",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "The ultimate CLI for creating Next.js applications with Shadcn UI",
   "main": "dist/cli.js",
   "bin": {
@@ -32,13 +32,10 @@
     "node": ">=18.0.0"
   },
   "files": [
-    "dist/",
-    "node_modules/figlet/",
-    "node_modules/oh-my-logo/",
-    "node_modules/cfonts/"
+    "dist/"
   ],
   "scripts": {
-    "build": "bun build src/cli.ts --outdir ./dist --target node --external oh-my-logo --external figlet --external cfonts",
+    "build": "bun build src/cli.ts --outdir ./dist --target node --external oh-my-logo --external figlet --external cfonts --external kleur --external prompts --external @types/prompts",
     "dev": "bun run src/cli.ts",
     "prepublishOnly": "bun run build"
   },
@@ -51,6 +48,7 @@
   "dependencies": {
     "@types/prompts": "^2.4.9",
     "cfonts": "^3.1.1",
+    "figlet": "^1.7.0",
     "kleur": "^4.1.5",
     "oh-my-logo": "^0.4.0",
     "prompts": "^2.4.2",
