--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "kleur": "^4.1.5",
     "oh-my-logo": "^0.4.0",
     "prompts": "^2.4.2",
-    "react-devtools-core": "^7.0.1"
+    "react-devtools-core": "^7.0.1",
+    "spdx-license-list": "^6.10.0"
   }
 }
